Creation of a verification system

--- a/crmsystem_backend/src/main/resources/i18n/page.properties
+++ b/crmsystem_backend/src/main/resources/i18n/page.properties
@@ -13,6 +13,7 @@ registration.placeholder.usertype=User type
 login.placeholder.username=Username
 registration.buttons.submit=Submit
 login.buttons.login=Log in
+verifier.buttons.verifier=Submit
 login.link.createAnAccount=Create an account
 welcome.head=Welcome
 welcome.link.logout=Logout
