--- a/crmsystem_backend/src/main/resources/i18n/page_en.properties
+++ b/crmsystem_backend/src/main/resources/i18n/page_en.properties
@@ -1,4 +1,5 @@
 login.buttons.login=Log in
+verifier.buttons.verifier=Submit
 registration.buttons.submit=Submit
 login.placeholder.password=Password
 general.EN=EN
