Create password recovery

--- a/crmsystem_backend/src/main/resources/i18n/page_en.properties
+++ b/crmsystem_backend/src/main/resources/i18n/page_en.properties
@@ -1,5 +1,6 @@
 login.buttons.login=Log in
 verifier.buttons.verifier=Submit
+passwordrecovery.button=Password recovery
 registration.buttons.submit=Submit
 login.placeholder.password=Password
 general.EN=EN
