--- a/crmsystem_backend/src/main/resources/i18n/page_ru.properties
+++ b/crmsystem_backend/src/main/resources/i18n/page_ru.properties
@@ -1,6 +1,6 @@
 login.buttons.login=\u0412\u043E\u0439\u0442\u0438
 verifier.buttons.verifier=Верификация
-passwordrecovery.button=Восстановление пароля
+passwordrecovery.button=Восстановить пароль
 registration.buttons.submit=\u0417\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u0442\u044C\u0441\u044F
 login.placeholder.password=\u041F\u0430\u0440\u043E\u043B\u044C
 general.EN=\u0410\u041D\u0413
